--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
   "name": "Getting Started Example",
   "version": "1.0",
-  "description": "romebop timkimcool note ",
+  "description": "take notes in the browser!",
   "permissions": [
     "contextMenus",
+    "identity",
+    "identity.email",
+    "notifications",
     "storage"
   ],
   "background": {
