--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,23 @@
     "identity",
     "identity.email",
     "notifications",
-    "storage"
+    "storage",
+    "tabs",
+    "*://*/*"
   ],
   "background": {
     "scripts": [ "background.js" ],
     "persistent": false
   },
   "commands": {
-
+    "save-note": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+S",
+        "windows": "Ctrl+Shift+S",
+        "mac": "Command+Shift+S"
+      },
+      "description": "Save current selection as note"
+    }
   },
   "page_action": {
     "default_popup": "popup.html",
